# contextual-loss

./: .gitignore  CLAUDE.md  README.md  feature_extraction_swinvit.py  feature_extraction_unet.py  pyproject.toml
data/: .gitkeep
results/: .gitkeep
scripts/: convert_swinvit_to_hf.py  test_anatomix_feature_extractor.py  test_compute_cosine_distance.py  test_swin_loading.py  test_swinvit_contextual_loss.py  test_swinvit_feature_extractor.py
src/contextual_loss/: __init__.py  ctx_loss.py  swinvit_contextual_loss.py
src/feature_extractor/: anatomix_unet_feature_extractor.py  config.py  resnet.py  resnet_feature_extractor.py  swinvit_feature_extractor.py  varautoencoder_maisi.py
src/loss/: __init__.py  swinvit_contextual_loss.py
weights/: .gitkeep
