[project]
name = "contextual-loss"
version = "0.1.0"
description = "3D Contextual Loss for Medical Images - contextual loss functions optimized for 3D medical imaging data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "monai>=1.0.0",
    "autorootcwd>=1.0.0",
    "nibabel>=5.0.0",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm>=4.60.0",
    "einops>=0.6.0",
    "transformers>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
